# mongodb-rooms-pkg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: README.md
src/mongodb_rooms_pkg/: __init__.py  addon.py
src/mongodb_rooms_pkg/actions/: README.md  __init__.py  base.py  create_collection.py  delete.py  describe.py  describe_collection.py  insert.py  update.py  upsert.py
src/mongodb_rooms_pkg/configuration/: __init__.py  addonconfig.py  baseconfig.py
src/mongodb_rooms_pkg/configuration/examples/: api_config.py  database_config.py  llm_config.py
src/mongodb_rooms_pkg/memory/: __init__.py  example.py
src/mongodb_rooms_pkg/services/: __init__.py  connection.py  credentials.py  example.py
src/mongodb_rooms_pkg/storage/: __init__.py  example.py
src/mongodb_rooms_pkg/tools/: __init__.py  example.py
src/mongodb_rooms_pkg/utils/: __init__.py  example.py
src/template_rooms_pkg/: addon.py
src/template_rooms_pkg/actions/: __init__.py  base.py  example.py
src/template_rooms_pkg/configuration/: __init__.py  addonconfig.py
src/template_rooms_pkg/configuration/examples/: api_config.py
src/template_rooms_pkg/memory/: example.py
src/template_rooms_pkg/services/: __init__.py  credentials.py  example.py
src/template_rooms_pkg/storage/: example.py
src/template_rooms_pkg/tools/: __init__.py
src/template_rooms_pkg/utils/: __init__.py  example.py
tests/: conftest.py  test_action_validation.py  test_additional_actions.py  test_addon.py  test_addon_validation.py  test_base_models.py  test_configuration.py  test_connection.py  test_credentials.py  test_examples.py
tests/actions/: test_placeholder_actions.py
